Revision history for VMware::vCloud

NB: Skipped version numbers were never released.

VERSIONTAG DATETAG

  Added:
	VMware::vCloud - delete_org(), delete_org_network(), delete_vdc(), 
	  disable_org(), disable_vdc(), enable_org(), enable_vdc(), purge()

  Improved:
    VMware::vCloud - get_org() - now returns hash or hashref depending on context.
    VMware::vCloud - get_org() - Improved POD.

2.19 2013/03/13

  Added:
    VMware::vCloud - create_external_network()
    VMware::API::vCloud - admin(), admin_extension_get(), 
      admin_extension_vimServer_get(), delete(), get_raw(), org_create(), 
      org_list(), org_network_create(), org_vdc_create(), pvdc_get(), vdc_list()
    API version information is now read directly from offered versions.
    Learned variables and Raw responses now attached to $VMware::API::vCloud::self
    When Debug is on, learned variables are displayed on exit.
    
  Improved:
    Now working with API version v5.1
    Removed the 1.0 and 1.5 schema from the MANIFEST until necessary.
    Most recent version is used.
    Login URL is now directed by Version response.
    VMware::API::vCloud - org_list() now generated with caching.

  Fixed:
    Version now included in accept header for authentication.
  
2.12 2011/10/27

  Added:
    XML schema descriptors for 1.0 and 1.5 included in distribution.
    VMware::API::vCloud - "Template name validation" to "BUGS and LIMITATIONS" POD.
    VMware::vCloud - create_vapp_from_template(), get_template(), 
      list_networks(), list_vdcs()
    VMware::API::vCloud - template_get()
    examples/list-templates.pl - Example of how to list templates.
    examples/create-vapp-from-template.pl - Instantiate a template with defaults.

  Improved:
    examples/poweron-vapp.pl - Corrected documentation.
    VMware::vCloud & VMware::vCloud::vApp - now used bless() with two arguments.
    VMware::API::vCloud
      _fault() now pushes a Dumper() of the HTTP object on error. That gives 